Add script tag for Brick MMO library

--- a/index.html
+++ b/index.html
@@ -326,6 +326,8 @@
         <br>
         <span class='label'>brick-overflow</span>
     </div>
+
+    <script src="https://cdn.brickmmo.com/bar@1.0.0/bar.js"></script>
     
 </body>
 </html>
